--- a/package.xml
+++ b/package.xml
@@ -13,11 +13,11 @@
   <email />
   <active>yes</active>
  </lead>
- <date>2010-06-11</date>
- <time>17:53:52</time>
+ <date>2010-09-17</date>
+ <time>22:55:58</time>
  <version>
-  <release>1.3.0</release>
-  <api>1.3.0</api>
+  <release>1.3.1</release>
+  <api>1.3.1</api>
  </version>
  <stability>
   <release>devel</release>
@@ -25,8 +25,7 @@
  </stability>
  <license>apache</license>
  <notes>
-* Added ability to authenticate by mobile_cookie_uid (mobile_cookie_uid による認証のサポート)
-* Added value of auth_mode_caption for this authentication plugin
+Fixed &quot;Enhancement（機能追加・改善） #1583: opAuthLoginFormMobileUID::isUtn() の返り値を、管理画面の設定値によって決定するようにする&quot;
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -38,7 +37,7 @@
    <file baseinstalldir="/" md5sum="e01541ec7e472dec05fa0d51710e8eca" name="data/migrations/1.1.0/001_set_uid_type_for_bc.php" role="data" />
    <file baseinstalldir="/" md5sum="1a4bc66a05dfa64ff876e8a363f11a06" name="data/migrations/1.1.0/fixtures/001_set_uid_type_for_bc.yml" role="data" />
    <file baseinstalldir="/" md5sum="c8ec6969ed65ccf41839942f53048cae" name="lib/form/opAuthConfigFormMobileUID.class.php" role="data" />
-   <file baseinstalldir="/" md5sum="6c3f59a968ba2067ee92f3a419932765" name="lib/form/opAuthLoginFormMobileUID.class.php" role="data" />
+   <file baseinstalldir="/" md5sum="8260609bf0e66cc27a71c1af60dc9a29" name="lib/form/opAuthLoginFormMobileUID.class.php" role="data" />
    <file baseinstalldir="/" md5sum="28fc9b639605e405f43c8f4eaae204cb" name="lib/user/opAuthAdapterMobileUID.class.php" role="data" />
    <file baseinstalldir="/" md5sum="3b83ef96387f14655fc854ddc3c6bd57" name="LICENSE" role="data" />
   </dir>
@@ -84,6 +83,21 @@ First release
    <notes>
 * Added ability to authenticate by mobile_cookie_uid (mobile_cookie_uid による認証のサポート)
 * Added value of auth_mode_caption for this authentication plugin
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.3.1</release>
+    <api>1.3.1</api>
+   </version>
+   <stability>
+    <release>devel</release>
+    <api>devel</api>
+   </stability>
+   <date>2010-09-17</date>
+   <license>apache</license>
+   <notes>
+Fixed &quot;Enhancement（機能追加・改善） #1583: opAuthLoginFormMobileUID::isUtn() の返り値を、管理画面の設定値によって決定するようにする&quot;
    </notes>
   </release>
  </changelog>
