--- a/config/auth.yml
+++ b/config/auth.yml
@@ -4,3 +4,15 @@ enable_pc:
 
 admin_invite:
   Default:  false
+
+allow_fallback_uid:
+  Name:      "allow_fallback_uid"
+  Caption:   "(ドコモ、ソフトバンクのみ) 主となる携帯電話個体識別番号が取得できなかった場合に、代替の携帯電話個体識別番号を取得するかどうか"
+  FormType:  "radio"
+  ValueType: "text"
+  IsConfig:   true
+  IsRequired: true
+  Default:    0
+  Choices:
+    0: "取得しない"
+    1: "取得する (非推奨)"
